<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:background="@color/colorAccent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_dialog_title"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/roboto_regular"
        android:textSize="18sp"
        android:text="@string/forgot_dialog_title"/>

    <TextView
        android:id="@+id/forgot_dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_dialog_title"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/forgot_dialog_message"
        android:textColor="@color/colorDarkGrey" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/forgot_dialog_usernameWrapper"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_below="@+id/forgot_dialog_message"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/colorDarkGrey"
        android:theme="@style/AppTheme"
        app:errorEnabled="true"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/login_username_hint"
            android:singleLine="true"
            android:textCursorDrawable="@null" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_cancel"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_dialog_usernameWrapper"
        android:layout_toStartOf="@+id/btn_email_me"
        android:background="@android:color/transparent"
        android:fontFamily="@font/roboto_regular"
        android:gravity="end|center"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/btn_email_me"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/forgot_dialog_usernameWrapper"
        android:layout_below="@+id/forgot_dialog_usernameWrapper"
        android:background="@android:color/transparent"
        android:fontFamily="@font/roboto_regular"
        android:gravity="end|center"
        android:paddingEnd="4dp"
        android:paddingStart="5dp"
        android:text="@string/email_me"
        android:textColor="@color/colorDarkGrey" />

</RelativeLayout>