<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <!--@color/colorPrimaryDark-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="32sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="30dp"
        android:background="@color/colorGrey"
        style="@style/Widget.AppCompat.Button.Colored"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/btn_login"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btn_login"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="15dp"
        android:gravity="center_vertical|center"
        android:layout_toEndOf="@+id/btn_login"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/btn_signup"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/btn_skip_for_now"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@android:color/transparent"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/btn_skip_for_now"
        android:textColor="@color/colorDarkGrey" />

</RelativeLayout>