<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_signup_close"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:alpha="0.2"
            android:src="@drawable/ic_close_black_24dp" />

        <ImageView
            android:id="@+id/signup_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/signup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/signup_title"
            android:textSize="18sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/signup_title"
            android:layout_marginTop="10dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/q_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/have_an_account"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/q_have_an_account"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/colorDarkGrey"
            android:theme="@style/AppTheme"
            app:errorEnabled="true"
            app:hintEnabled="false">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/username_hint"
                    android:singleLine="true"
                    android:textCursorDrawable="@null" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/usernameWrapper"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/colorDarkGrey"
            android:theme="@style/AppTheme"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/password_hint"
                android:singleLine="true"
                android:inputType="textPassword"
                android:textCursorDrawable="@null" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordWrapper"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/colorDarkGrey"
            android:theme="@style/AppTheme"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/email_hint"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@null" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_form_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailWrapper"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_centerHorizontal="true"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/btn_signup"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/terms_privacy_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_form_signup"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/terms_privacy_content"
            android:textSize="16sp" />

    </RelativeLayout>

</ScrollView>
