<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login_close"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:alpha="0.2"
            android:src="@drawable/ic_close_black_24dp" />

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/signup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/login_title"
            android:textSize="18sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/signup_title"
            android:layout_marginTop="10dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/q_new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/new_user"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_usernameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/q_new_user"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/colorDarkGrey"
            android:theme="@style/AppTheme"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/login_username_hint"
                android:singleLine="true"
                android:textCursorDrawable="@null" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_passwordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_usernameWrapper"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/colorDarkGrey"
            android:theme="@style/AppTheme"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textCursorDrawable="@null" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/login_passwordWrapper"
            android:layout_alignEnd="@+id/login_passwordWrapper"
            android:layout_marginBottom="0dp"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/roboto_regular"
            android:paddingEnd="4dp"
            android:paddingStart="5dp"
            android:text="@string/q_forgot_password"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_form_login"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_passwordWrapper"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/btn_login"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/login_error_message"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/q_new_user"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="invisible" />


    </RelativeLayout>

</ScrollView>
