<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_update_profile_close"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:alpha="0.2"
            android:src="@drawable/ic_close_black_24dp" />

        <ImageView
            android:id="@+id/update_profile_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/update_profile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/update_profile_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/update_profile_title"
            android:textSize="18sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/update_profile_title"
            android:layout_marginTop="10dp"
            android:background="?android:attr/listDivider" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/updateEmailWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/colorDarkGrey"
            android:theme="@style/AppTheme"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/updateEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/email_hint"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@null" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/updatePasswordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/updateEmailWrapper"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/colorDarkGrey"
            android:theme="@style/AppTheme"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/updatePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/password_hint"
                android:singleLine="true"
                android:inputType="textPassword"
                android:textCursorDrawable="@null" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_form_update_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/updatePasswordWrapper"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_centerHorizontal="true"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/update_button"
            android:textColor="@color/colorAccent" />

    </RelativeLayout>

</ScrollView>
